--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -106,6 +106,54 @@
                     }
 
                 }
+
+                &.radio {
+                    @include flex(center, center, 12px);
+                    width: 100%;
+
+                    a {
+                        position: relative;
+                        @include flex(center, flex-start, 6px);
+                        padding: 4px 10px;
+                        background: $main-btn-bg-color;
+                        height: 48px;
+                        border-radius: 4px;
+                        @include ftM;
+                        font-size: rem(14);
+                        color: $ft-main-color;
+                        transition: 0.3s all ease-in-out;
+                        width: calc(100% / 3 - 6px);
+
+                        &::before {
+                            @include content;
+                            width: 26px;
+                            height: 26px;
+                            border-radius: 6px;
+                        }
+
+                        &:hover {
+                            background: $main-btn-hv-color;
+                        }
+
+                        &.mbc {
+                            &::before {
+                                @include ico_mbc;
+                            }
+                        }
+
+                        &.sbs {
+                            &::before {
+                                @include ico_sbs;
+                            }
+                        }
+
+                        &.kbs {
+                            &::before {
+                                @include ico_kbs;
+                            }
+                        }
+                    }
+                }
             }
         }
 
@@ -119,6 +167,16 @@
                 @include ftM;
                 font-size: rem(16);
                 color: $ft-main-color;
+
+                .pc_txt {
+                    display: block;
+                    font-size: rem(12);
+                    color: $red;
+                    margin-top: 12px;
+                    &::before {
+                        content: '*';
+                    }
+                }
             }
 
             .modal_close_btn {
